--- a/BetterBullTracker.csproj
+++ b/BetterBullTracker.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Flurl.Http" Version="2.4.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.0" />
   </ItemGroup>
 
