--- a/BetterBullTracker.csproj
+++ b/BetterBullTracker.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Flurl.Http" Version="2.4.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.0" />
+    <PackageReference Include="WatsonWebsocket" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
