more work on adding vehicles mid-route and headway calculation

--- a/BetterBullTracker/BetterBullTracker.csproj
+++ b/BetterBullTracker/BetterBullTracker.csproj
@@ -15,5 +15,9 @@
     <Folder Include="Predictions\HistoricalAverage\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SyncromaticsAPI\SyncromaticsAPI.csproj" />
+  </ItemGroup>
+
 
 </Project>
