--- a/SyncromaticsAPI/SyncromaticsAPI.csproj
+++ b/SyncromaticsAPI/SyncromaticsAPI.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flurl" Version="2.8.2" />
+    <PackageReference Include="Flurl.Http" Version="2.4.2" />
+  </ItemGroup>
+
 </Project>
